--- a/prueba-css/index.html
+++ b/prueba-css/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Parcel Sandbox</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Prueba Técnica CSS</title>
+    <link rel="stylesheet" href="./src/styles.css" />
+  </head>
 
-<head>
-	<title>Parcel Sandbox</title>
-	<meta charset="UTF-8" />
-	<title>Prueba Técnica CSS</title>
-    <link rel="stylesheet" href="./src/styles.css">
-</head>
+  <body>
+    <div id="app"></div>
 
-<body>
-	<div id="app"></div>
-
-	<script type="module" src="src/index.js">
-	</script>
-</body>
-
+    <script type="module" src="src/index.js"></script>
+  </body>
 </html>
